# nBundle-Audio

nComp/: README.md
nComp/JUCE/: CMakeLists.txt
nComp/JUCE/Analysis/: AnalysisMain.cpp
nComp/JUCE/Source/: FPUDownsampler2x.h  FPUStageProc.h  FPUUpsampler2x.h  NCompProcessor.cpp  NCompProcessor.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
nComp/Presets/: README.md
nComp/Presets/FET/: 01_Mix_Bus_Glue.ncompreset  02_Mix_Bus_Forward.ncompreset  03_Drum_Bus_Punch.ncompreset  04_Drum_Crush_Parallel.ncompreset  05_Vocal_Leveller.ncompreset  06_Vocal_Presence.ncompreset  07_Bass_Tight.ncompreset  08_Bass_Thick.ncompreset  09_Acoustic_Tame.ncompreset  10_Piano_Round.ncompreset  11_Guitar_Tight.ncompreset  12_Guitar_Thick.ncompreset  13_Keys_Smooth.ncompreset  14_Parallel_Energy.ncompreset  15_Master_Gentle.ncompreset  16_Sidechain_Motion.ncompreset
nComp/Presets/MU/: 01_Mix_Bus_Glue.ncompreset  02_Mix_Bus_Forward.ncompreset  03_Drum_Bus_Punch.ncompreset  04_Drum_Crush_Parallel.ncompreset  05_Vocal_Leveller.ncompreset  06_Vocal_Presence.ncompreset  07_Bass_Tight.ncompreset  08_Bass_Thick.ncompreset  09_Acoustic_Tame.ncompreset  10_Piano_Round.ncompreset  11_Guitar_Tight.ncompreset  12_Guitar_Thick.ncompreset  13_Keys_Smooth.ncompreset  14_Parallel_Energy.ncompreset  15_Master_Gentle.ncompreset  16_Sidechain_Motion.ncompreset
nComp/Presets/OPTO/: 01_Mix_Bus_Glue.ncompreset  02_Mix_Bus_Forward.ncompreset  03_Drum_Bus_Punch.ncompreset  04_Drum_Crush_Parallel.ncompreset  05_Vocal_Leveller.ncompreset  06_Vocal_Presence.ncompreset  07_Bass_Tight.ncompreset  08_Bass_Thick.ncompreset  09_Acoustic_Tame.ncompreset  10_Piano_Round.ncompreset  11_Guitar_Tight.ncompreset  12_Guitar_Thick.ncompreset  13_Keys_Smooth.ncompreset  14_Parallel_Energy.ncompreset  15_Master_Gentle.ncompreset  16_Sidechain_Motion.ncompreset
nComp/Presets/STD/: 01_Mix_Bus_Glue.ncompreset  02_Mix_Bus_Forward.ncompreset  03_Drum_Bus_Punch.ncompreset  04_Drum_Crush_Parallel.ncompreset  05_Vocal_Leveller.ncompreset  06_Vocal_Presence.ncompreset  07_Bass_Tight.ncompreset  08_Bass_Thick.ncompreset  09_Acoustic_Tame.ncompreset  10_Piano_Round.ncompreset  11_Guitar_Tight.ncompreset  12_Guitar_Thick.ncompreset  13_Keys_Smooth.ncompreset  14_Parallel_Energy.ncompreset  15_Master_Gentle.ncompreset  16_Sidechain_Motion.ncompreset
nComp/Presets/TUBE/: 01_Mix_Bus_Glue.ncompreset  02_Mix_Bus_Forward.ncompreset  03_Drum_Bus_Punch.ncompreset  04_Drum_Crush_Parallel.ncompreset  05_Vocal_Leveller.ncompreset  06_Vocal_Presence.ncompreset  07_Bass_Tight.ncompreset  08_Bass_Thick.ncompreset  09_Acoustic_Tame.ncompreset  10_Piano_Round.ncompreset  11_Guitar_Tight.ncompreset  12_Guitar_Thick.ncompreset  13_Keys_Smooth.ncompreset  14_Parallel_Energy.ncompreset  15_Master_Gentle.ncompreset  16_Sidechain_Motion.ncompreset
nComp/Presets/VCA/: 01_Mix_Bus_Glue.ncompreset  02_Mix_Bus_Forward.ncompreset  03_Drum_Bus_Punch.ncompreset  04_Drum_Crush_Parallel.ncompreset  05_Vocal_Leveller.ncompreset  06_Vocal_Presence.ncompreset  07_Bass_Tight.ncompreset  08_Bass_Thick.ncompreset  09_Acoustic_Tame.ncompreset  10_Piano_Round.ncompreset  11_Guitar_Tight.ncompreset  12_Guitar_Thick.ncompreset  13_Keys_Smooth.ncompreset  14_Parallel_Energy.ncompreset  15_Master_Gentle.ncompreset  16_Sidechain_Motion.ncompreset
nComp/docs/: validation-and-qa.md
nComp/scripts/: generate_presets.rb
nEQ/: .gitignore  README.md
nEQ/JUCE/: CMakeLists.txt
nEQ/JUCE/Source/: NEQProcessor.cpp  NEQProcessor.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
nEQ/scripts/: generate_coeff_lut.rb
